# pin-project

./: .clippy.toml  .deny.toml  .editorconfig  .external-types.toml  .git-blame-ignore-revs  .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  bors.toml  ci.sh  clippy.toml  compiletest.sh  rust-toolchain.toml
.github/: bors.toml  dependabot.yml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  release.yml
ci/: azure-clippy.yml  azure-compile-test.yml  azure-compiletest.yml  azure-install-rust.yml  azure-rustdoc.yml  azure-rustfmt.yml  azure-test.yml  check-minimal-versions.sh  publish.sh
doc/: enum-example-1.md  struct-example-1.md
examples/: README.md  enum-default-expanded.rs  enum-default.rs  not_unpin-expanded.rs  not_unpin.rs  pinned_drop-expanded.rs  pinned_drop.rs  project_replace-expanded.rs  project_replace.rs  struct-default-expanded.rs  struct-default.rs  unsafe_unpin-expanded.rs  unsafe_unpin.rs
pin-project/: Cargo.toml
pin-project-internal/: Cargo.toml  build.rs
pin-project-internal/src/: lib.rs  pinned_drop.rs  project.rs  utils.rs
pin-project-internal/src/pin_project/: args.rs  attribute.rs  derive.rs  enums.rs  mod.rs  structs.rs
pin-project-internal/src/pin_projectable/: enums.rs  mod.rs  structs.rs
pin-project-internal/tests/: project.rs  unsafe_project.rs
pin-project-internal/tests/ui/unsafe_project/: packed.rs  packed.stderr  unsupported.stderr
pin-project/src/: lib.rs
pin-project/tests/: unsafe_unpin.rs
pin-project/tests/ui/: update-references.sh
pin-project/tests/ui/unsafe_project/: packed.rs  packed.stderr  unpin_conflict.rs  unpin_conflict.stderr  unsupported.rs
scripts/: ci.sh  expandtest.sh  publish.sh
src/: enums.rs  fields.rs  lib.rs  macros.rs  pin_project.rs  project.rs  structs.rs  utils.rs  variants.rs
src/compile_fail/: mod.rs  unpin_conflict.rs
src/unsafe_project/: enums.rs  mod.rs  structs.rs
tests/: README.md  cfg.rs  clippy.rs  compile-test.rs  compiletest.rs  drop_order.rs  expandtest.rs  forbid_unsafe.rs  lint.rs  lint.txt  lints.rs  no_infer_outlives.rs  overwriting_core_crate.rs  pin_project.rs  pinned_drop.rs  project.rs  project_if_attr.rs.in  project_nightly.rs  project_ref.rs  project_replace.rs  proper_unpin.rs  repr_packed.rs  test.rs  unsafe_project.rs  unsafe_unpin.rs
tests/auxiliary/: mod.rs
tests/auxiliary/macro/: Cargo.toml  build.rs  lib.rs
tests/doc/: Cargo.toml  build.rs  lib.rs
tests/doc/src/: lib.rs
tests/expand/: Cargo.toml  README.md  build.rs
tests/expand/default/: enum.expanded.rs  struct.expanded.rs  tuple_struct.expanded.rs
tests/expand/expand/default/: tuple_struct.expanded.rs
tests/expand/expand/naming/: enum-all.expanded.rs  enum-mut.expanded.rs  enum-ref.expanded.rs  tuple_struct-mut.expanded.rs
tests/expand/expand/project_replace/: struct.expanded.rs  tuple_struct.expanded.rs
tests/expand/explicit_pub/: enum.expanded.rs  enum.rs  struct.expanded.rs  struct.rs  struct_replace.expanded.rs  struct_replace.rs  tuple_struct.expanded.rs  tuple_struct.rs
tests/expand/multifields/: enum.expanded.rs  struct.expanded.rs  tuple_struct.expanded.rs
tests/expand/naming/: enum-all.expanded.rs  enum-mut.expanded.rs  enum-none.expanded.rs  enum-own.expanded.rs  enum-ref.expanded.rs  struct-all.expanded.rs  struct-mut.expanded.rs  struct-none.expanded.rs  struct-own.expanded.rs  struct-ref.expanded.rs  tuple_struct-all.expanded.rs  tuple_struct-mut.expanded.rs  tuple_struct-none.expanded.rs  tuple_struct-own.expanded.rs  tuple_struct-ref.expanded.rs
tests/expand/not_unpin/: enum.expanded.rs  struct.expanded.rs  tuple_struct.expanded.rs
tests/expand/pinned_drop/: enum.expanded.rs  struct.expanded.rs  tuple_struct.expanded.rs
tests/expand/project_replace/: enum.expanded.rs  struct.expanded.rs  tuple_struct.expanded.rs
tests/expand/pub/: enum.expanded.rs  struct.expanded.rs  tuple_struct.expanded.rs
tests/expand/tests/: expandtest.rs
tests/expand/tests/enum/: default.expanded.rs  enum-default.rs  project_replace.expanded.rs  project_replace.rs
tests/expand/tests/expand/: default-enum.expanded.rs  default-struct.expanded.rs  default-tuple_struct.expanded.rs  multifields-enum.expanded.rs  multifields-struct.expanded.rs  multifields-tuple_struct.expanded.rs  naming-enum-all.expanded.rs  naming-enum-mut.expanded.rs  naming-enum-none.expanded.rs  naming-enum-own.expanded.rs  naming-enum-ref.expanded.rs  naming-enum.expanded.rs  naming-enum.rs  naming-struct-all.expanded.rs  naming-struct-mut.expanded.rs  naming-struct-none.expanded.rs  naming-struct-own.expanded.rs  naming-struct-ref.expanded.rs  naming-struct.expanded.rs  naming-struct.rs  naming-tuple_struct-all.expanded.rs  naming-tuple_struct-mut.expanded.rs  naming-tuple_struct-none.expanded.rs  naming-tuple_struct-own.expanded.rs  naming-tuple_struct-ref.expanded.rs  naming-tuple_struct.expanded.rs  naming-tuple_struct.rs  not_unpin-enum.expanded.rs  not_unpin-enum.rs  not_unpin-struct.expanded.rs  not_unpin-tuple_struct.expanded.rs  pinned_drop-enum.expanded.rs  pinned_drop-enum.rs  pinned_drop-struct.expanded.rs  pinned_drop-struct.rs  pinned_drop-tuple_struct.expanded.rs  pinned_drop-tuple_struct.rs  project_replace-enum.expanded.rs  project_replace-enum.rs  project_replace-struct.expanded.rs  (+11 more)
tests/expand/tests/struct/: default.expanded.rs  pinned_drop.expanded.rs  pinned_drop.rs  project_replace.expanded.rs  struct-default.expanded.rs  unsafe_unpin.expanded.rs  unsafe_unpin.rs
tests/expand/unsafe_unpin/: enum.expanded.rs  struct.expanded.rs  tuple_struct.expanded.rs  tuple_struct.rs
tests/include/: basic-safe-part.rs  basic.rs
tests/lint/: Cargo.toml  lib.rs
tests/no-core/: Cargo.toml  build.rs  lib.rs
tests/no-std/: Cargo.toml  lib.rs
tests/no-std/src/: lib.rs
tests/run-pass/: negative_impls.rs  private_in_public-enum.rs
tests/rust-2015/: Cargo.toml  lib.rs
tests/test_2015/: Cargo.toml
tools/: .tidy-check-license-headers  ci.sh  publish.sh  tidy.sh  update-version.sh
tools/ci/: publish.sh
(+183 files in other folders)
