[package]
name = "pin-project-internal"
version = "1.1.2"
edition = "2018"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/pin-project"
keywords = ["pin", "macros", "attribute"]
categories = ["no-std", "rust-patterns"]
description = """
Implementation detail of the `pin-project` crate.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1"
syn = { version = "2.0.1", features = ["full", "visit-mut"] }

[dev-dependencies]
pin-project = { path = ".." }
