[package]
name = "expandtest"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[dev-dependencies]
pin-project = { path = "../.." }
macrotest = { version = "1.0.6", git = "https://github.com/taiki-e/macrotest.git", branch = "unique-name" }
rustversion = "1"
