[package]
name = "pin-project-auxiliary-macro"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"
proc-macro = true
name = "auxiliary_macro"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
