[package]
name = "pin-project-auxiliary-macro"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "auxiliary_macro"
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
